--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
+.metadata {
+  span + span::before {
+    content: "|";
+    margin: 0 3px;
+  }
+}
+
 .navbar-brand {
   img {
     max-height: 28px;
