--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar navbar-light">
-    <a class="navbar-brand" href="https://acoustic.co/">
-      <img alt="Acoustic" src="/assets/images/logo.png" target="_blank">
+    <a class="navbar-brand" href="https://acoustic.co/" target="_blank" title="Go to Acoustic website">
+      <img alt="Acoustic" src="/assets/images/logo.png">
     </a>
   </nav>
 
