--- a/src/app/shared/article/article.component.html
+++ b/src/app/shared/article/article.component.html
@@ -3,7 +3,7 @@
 <ng-container *ngIf="!isLoading">
   <div *ngIf="fetchError" class="alert alert-danger" role="alert">
     <strong>Error:</strong>
-    It wasn't possible to fetch the content from the given
+    It wasn't possible to fetch any content for the given
     <em>API Key</em> and <em>Content ID</em>.
     Either the given params are invalid or API is currently unavailable. Please
     double check the article params or try again later.
