--- a/src/app/shared/article/article.component.html
+++ b/src/app/shared/article/article.component.html
@@ -65,5 +65,5 @@
     <p *ngIf="!article.body" class="text-secondary">[No content body]</p>
   </article>
 
-  <button class="btn btn-link" type="button" (click)="onClose()">< Go back</button>
+  <button class="btn btn-link mb-4" type="button" (click)="onClose()">< Go back</button>
 </ng-container>
