--- a/src/app/shared/article-params-form/article-params-form.component.html
+++ b/src/app/shared/article-params-form/article-params-form.component.html
@@ -4,10 +4,7 @@
   </header>
 
   <main class="card-body">
-    <p>
-      Please provide the <em>Content Hub ID</em> and <em>Content ID</em> of the
-      content your want to be rendered.
-    </p>
+    <p>Please provide the <em>Content Hub ID</em> and <em>Content ID</em> of the content you want to be rendered.</p>
 
     <small class="text-secondary">
       See
