--- a/src/app/shared/article-params-form/article-params-form.component.html
+++ b/src/app/shared/article-params-form/article-params-form.component.html
@@ -40,6 +40,6 @@
   </main>
 
   <footer class="card-footer text-right">
-    <button class="btn btn-primary" [disabled]="form.invalid" type="submit">Fetch Article</button>
+    <button class="btn btn-primary" [disabled]="form.invalid" type="submit">Render Content</button>
   </footer>
 </form>
