--- a/src/app/shared/article/article.component.html
+++ b/src/app/shared/article/article.component.html
@@ -13,7 +13,7 @@
 
       <ul class="list-unstyled">
         <li>
-          <strong>API Key:</strong> {{ params.apiKey || '[none]' }}
+          <strong>API Key:</strong> {{ params.contentHubId || '[none]' }}
         </li>
         <li>
           <strong>Content ID:</strong> {{ params.contentId || '[none]' }}
@@ -33,7 +33,7 @@
       </p>
 
       <p>
-        <strong>API Key:</strong> {{ params.apiKey || '[none]' }}
+        <strong>API Key:</strong> {{ params.contentHubId || '[none]' }}
       </p>
     </ng-container>
   </div>
