--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  font-family: 'Exo 2', Helvetica, Arial, sans-serif;;
+  font-family: 'Exo 2', Helvetica, Arial, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
